Try fixing double tap issue on mobile

--- a/style/style-project.css
+++ b/style/style-project.css
@@ -50,20 +50,6 @@ html {
   list-style-type: none;
 }
 
-/* Non-touch devices */
-@media (hover: hover) {
-  .link:hover {
-      /* styles for hover state */
-  }
-}
-
-/* Touch devices */
-@media (hover: none) {
-  .link:active {
-      /* styles for active state */
-  }
-}
-
 h1 {
   font-family: 'Friends-very-bold', 'Neue-Machina', "Open Sans", sans-serif;
   font-size: 4.5rem;
